Fri Nov 13 14:48:00 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tests/UnkeyedSamples:
        * connectors/dds4ccm/tests/UnkeyedSamples/Base:
        * connectors/dds4ccm/tests/UnkeyedSamples/Base/Unkeyed_Test_Base.idl:
        * connectors/dds4ccm/tests/UnkeyedSamples/Base/Unkeyed_Test_Base.mpc:
        * connectors/dds4ccm/tests/UnkeyedSamples/Connector:
        * connectors/dds4ccm/tests/UnkeyedSamples/Connector/Unkeyed_Test_Connector.idl:
        * connectors/dds4ccm/tests/UnkeyedSamples/Connector/Unkeyed_Test_Connector.mpc:
        * connectors/dds4ccm/tests/UnkeyedSamples/Connector/Unkeyed_Test_Connector_exec.h:
        * connectors/dds4ccm/tests/UnkeyedSamples/Connector/Unkeyed_Test_Connector_exec.cpp:
        * connectors/dds4ccm/tests/UnkeyedSamples/Receiver:
        * connectors/dds4ccm/tests/UnkeyedSamples/Receiver/Unkeyed_Test_Receiver.idl:
        * connectors/dds4ccm/tests/UnkeyedSamples/Receiver/Unkeyed_Test_Receiver.mpc:
        * connectors/dds4ccm/tests/UnkeyedSamples/Receiver/Unkeyed_Test_Receiver_exec.h:
        * connectors/dds4ccm/tests/UnkeyedSamples/Receiver/Unkeyed_Test_Receiver_exec.cpp:
        * connectors/dds4ccm/tests/UnkeyedSamples/Sender:
        * connectors/dds4ccm/tests/UnkeyedSamples/Sender/Unkeyed_Test_Sender.idl:
        * connectors/dds4ccm/tests/UnkeyedSamples/Sender/Unkeyed_Test_Sender.mpc:
        * connectors/dds4ccm/tests/UnkeyedSamples/Sender/Unkeyed_Test_Sender_exec.h:
        * connectors/dds4ccm/tests/UnkeyedSamples/Sender/Unkeyed_Test_Sender_exec.cpp:
        * connectors/dds4ccm/tests/UnkeyedSamples/descriptors:
        * connectors/dds4ccm/tests/UnkeyedSamples/descriptors/Plan.cdp:
        * connectors/dds4ccm/tests/UnkeyedSamples/descriptors/USER_QOS_PROFILES.xml:
        * connectors/dds4ccm/tests/UnkeyedSamples/descriptors/run_test.pl:
          Added framework for an unkeyed samples test.

Fri Nov 13 14:13:15 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>
