@@ -1,3 +1,11 @@
+Fri Nov 13 19:36:00 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * connectors/dds4ccm/impl/ndds/EntityFactoryQosPolicy.h
+        * connectors/dds4ccm/impl/ndds/ReaderDataLifecycleQosPolicy.h
+        * connectors/dds4ccm/impl/ndds/ResourceLimitsQosPolicy.h
+        * connectors/dds4ccm/impl/ndds/WriterDataLifecycleQosPolicy.h
+          New QoS conversions
+
 Fri Nov 13 14:48:00 UTC 2009  Marcel Smit  <msmit@remedy.nl>
 
         * connectors/dds4ccm/tests/UnkeyedSamples:
